fix CryptographerImpl
